removed the API key

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
       }
     </style>
     <!-- Include the Google Maps JavaScript API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD69xNBbmoMmIr5ScAtKFUrBDCMONjJ-rE&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=[APIKEY_WITHOUT_BRACKETS]&libraries=places"></script>
 
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script>
