linked the kartiks html

--- a/templates/dev/index.html
+++ b/templates/dev/index.html
@@ -196,7 +196,7 @@
             A New Way To Reduce Emission</h3>
           <p class="my-3 pr-lg-4">Join us on this journey as we strive to revolutionize emissions estimation and support sustainable practices in the agricultural industry. Together, we can make a significant difference in reducing crop-generated emissions and preserving our planet for future generation.
             Further, as the world's population increases, farming will play an increasingly important role in sustaining global societies.</p>
-          <a href="start.html" class="btn btn-style btn-secondary mt-4">start using our tool</a>
+          <a href="{{url_for('start')}}" class="btn btn-style btn-secondary mt-4">start using our tool</a>
           <a href="{{url_for('mlmodel')}}" class="btn btn-style btn-secondary mt-4">start using our tool</a>
         </div>
         <div class="col-lg-6 bottom-ab-right mt-lg-0 mt-5">
