--- a/templates/dev/about.html
+++ b/templates/dev/about.html
@@ -11,7 +11,7 @@
   <link href="//fonts.googleapis.com/css2?family=Poppins:wght@300;600;700&display=swap" rel="stylesheet">
   <!-- google fonts -->
   <!-- Template CSS -->
-  <link rel="stylesheet" href="/css/style-starter.css">
+  <link rel="stylesheet" type = "text/css" href="{{url_for('static',filename='css/style-starter.css')}}">
   <link rel="icon" type="image/x-icon" href="/images/Untitled design.png" />
   <!-- Template CSS -->
 </head>
