--- a/templates/dev/index.html
+++ b/templates/dev/index.html
@@ -11,8 +11,8 @@
   <link href="//fonts.googleapis.com/css2?family=Poppins:wght@300;600;700&display=swap" rel="stylesheet">
   <!-- google fonts -->
   <!-- Template CSS -->
-  <link rel="stylesheet" href="{{url_for('static',filename='css/style-starter.css')}}">
-  <link rel="icon" type="image/x-icon" href="/images/Untitled design.png"/>
+  <link rel="stylesheet" type = "text/css" href="{{url_for('static',filename='css/style-starter.css')}}">
+  <link rel="icon" type="image/x-icon" href="{{url_for('static',filename='images/Untitleddesign.png')}}"/>
   <!-- Template CSS -->
 </head>
 
@@ -44,7 +44,7 @@
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="{{url_for('about')}}">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="services.html">Services</a>
@@ -90,7 +90,7 @@
                   <div class="banner-info-bg text-left">
                     <p>Good Food</p>
                     <h5>Experience Them Real Agricultural</h5>
-                    <a href="about.html" class="btn btn-white">start using our tool</a>
+                    <a href="{{url_for('about')}}" class="btn btn-white">start using our tool</a>
                   </div>
                 </div>
               </div>
@@ -115,7 +115,7 @@
                   <div class="banner-info-bg text-left">
                     <p>Good Food</p>
                     <h5>Healthy Food for Good Health</h5>
-                    <a href="about.html" class="btn btn-white">Read More</a>
+                    <a href="{{url_for('about')}}" class="btn btn-white">Read More</a>
                   </div>
                 </div>
               </div>
@@ -140,7 +140,7 @@
                   <div class="banner-info-bg text-left">
                     <p>Good Food</p>
                     <h5>Healthy Milk for Good Health</h5>
-                    <a href="about.html" class="btn btn-white">Read More</a>
+                    <a href="{{url_for('about')}}" class="btn btn-white">Read More</a>
                   </div>
                 </div>
               </div>
@@ -165,7 +165,7 @@
                   <div class="banner-info-bg text-left">
                     <p>Good Food</p>
                     <h5>Experience Them Real Agricultural</h5>
-                    <a href="about.html" class="btn btn-white">Read More</a>
+                    <a href="{{url_for('about')}}" class="btn btn-white">Read More</a>
                   </div>
                 </div>
               </div>
@@ -499,7 +499,7 @@
             <ul>
               <h6 class="footer-title-29">Useful Links</h6>
               <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
+              <li><a href="{{url_for('about')}}">About</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="#"> Blog posts</a></li>
               <li><a href="contact.html">Contact us</a></li>
