--- a/templates/dev/start.html
+++ b/templates/dev/start.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="{{url_for('static',filename='css/style-starter.css')}}">
   <link href="//fonts.googleapis.com/css2?family=Poppins:wght@300;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style-starter.css">
   <link rel="icon" type="image/x-icon" href="/images/Untitled design.png"/>
