--- a/templates/dev/start.html
+++ b/templates/dev/start.html
@@ -240,7 +240,7 @@
       </form>
     </div>
   </div>
-  <script src="/index.js"></script>
+  <script src="{{ url_for('static', filename='index.js') }}"></script>
 </body>
 
 </html>
