changes to index,html

--- a/templates/dev/index.html
+++ b/templates/dev/index.html
@@ -192,7 +192,7 @@
     <div class="container py-md-5">
       <div class="row bottom-ab-grids align-items-center">
         <div class="col-lg-6 bottom-ab-left pr-lg-5">
-          <h6 class="sub-title">About Us</h6>
+          <h6 class="sub-title">Environment | Sustainability | Security</h6>
           <h3 class="hny-title">
             A New Way To Reduce Emission</h3>
           <p class="my-3 pr-lg-4">Join us on this journey as we strive to revolutionize emissions estimation and support sustainable practices in the agricultural industry. Together, we can make a significant difference in reducing crop-generated emissions and preserving our planet for future generation.
@@ -202,7 +202,7 @@
         </div>
         <div class="col-lg-6 bottom-ab-right mt-lg-0 mt-5">
           <img src="{{url_for('static',filename='/images/co2-emissions-with-agriculture-blog.jpg')}}" class="img-curve img-fluid" alt="" />
-        </div>
+        </div> 
 
       </div>
     </div>
