changes in index

--- a/templates/dev/index.html
+++ b/templates/dev/index.html
@@ -23,7 +23,7 @@
       <nav class="navbar navbar-expand-lg stroke">
         <h1><a class="navbar-brand mr-lg-5" href="index.html">
 
-          <img src="{{url_for('static',filename='images/logo.png')}}" alt="Your logo" title="Your logo" style="height: 90px;"/>Green<span>Ag</span>
+          <img src="{{url_for('static',filename='images/logo2.png')}}" alt="Your logo" title="Your logo" style="height: 90px;"/>Green<span>Ag</span>
           </a></h1>
         <!-- <div class="diagonal-box"><a class="navbar-brand" href="#index.html">
           <img src="/images/Untitled design.png" alt="Your logo" title="Your logo" style="height: 90px;"/>
@@ -194,7 +194,7 @@
         <div class="col-lg-6 bottom-ab-left pr-lg-5">
           <h6 class="sub-title">Environment | Sustainability | Security</h6>
           <h3 class="hny-title">
-            A New Way To Reduce Emission</h3>
+            A New Way To Reduce Emissions</h3>
           <p class="my-3 pr-lg-4">Join us on this journey as we strive to revolutionize emissions estimation and support sustainable practices in the agricultural industry. Together, we can make a significant difference in reducing crop-generated emissions and preserving our planet for future generation.
             Further, as the world's population increases, farming will play an increasingly important role in sustaining global societies.</p>
           <a href="{{url_for('start')}}" class="btn btn-style btn-secondary mt-4">GHG Estimator</a>
