--- a/templates/dev/start.html
+++ b/templates/dev/start.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{{url_for('static',filename='css/styles.css')}}">
   <link href="//fonts.googleapis.com/css2?family=Poppins:wght@300;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="{{url_for('static',filename='css/style-starter.css')}}">
+  <!-- <link rel="stylesheet" href="{{url_for('static',filename='css/style-starter.css')}}"> -->
   <link rel="icon" type="image/x-icon" href="{{url_for('static',filename='images/favicon.ico')}}"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <title>GreenAg</title>
@@ -86,12 +86,10 @@
       <form id="userAccountSetupForm" name="userAccountSetupForm" enctype="multipart/form-data" method="POST">
         <!-- Step 1 Content -->
         <section id="step-1" class="form-step">
-          <h2 class="font-normal">About Us</h2>
+          <h2 class="font-normal">About this tool</h2>
           <!-- Step 1 input fields -->
           <div class="mt-3">
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-
+            "A farm emission calculator tool is a tool designed to estimate and track the greenhouse gas emissions produced by agricultural activities on a farm. It helps farmers assess their environmental impact and identify areas where they can implement strategies to reduce emissions. The tool typically takes into account various factors that contribute to emissions, such as livestock populations, fertilizer use, energy consumption, and waste management."
 
           </div>
           <div class="mt-3">
@@ -104,19 +102,33 @@
           <!-- Step 2 input fields -->
           <div class="mt-3">
             <h6>Please select the location of your farm</h6>
+            <table>
+              <tr>
             <div>
-              <label for="lat">Latitude:</label>
-              <input type="number" id="lat" name="lat">
+              <td>
+              <label for="lat">Latitude:</label></td>
+              
+              <td><input type="number" id="lat" name="lat"></td>
+            
             </div>
+            </tr>
+            <tr>
             <div>
+              <td>
               <label for="longy">Longitude:</label>
+              </td>
+              <td>
               <input type="number" id="longy" name="longy">
+                </td>
             </div>
+            </tr>
           </div>
+        </table>
           <div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6950840.425674824!2d-104.4374920467198!3d31.71684964456462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864070360b823249%3A0x16eb1c8f1808de3c!2sTexas%2C%20USA!5e0!3m2!1sen!2sin!4v1685964608784!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div>
+          
           <div  class="satelite"><iframe src="https://www.google.com/maps/embed?pb=!4v1685965019798!6m8!1m7!1sJlisa3gUt03qVjgusFj76w!2m2!1d31.47325825865038!2d-99.160226252092!3f165.85064983301376!4f-0.9330848807636016!5f0.7820865974627469" width="600"  height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+          </div>
           <div class="mt-3">
             <button class="button btn-navigate-form-step" type="button" step_number="1">Prev</button>
             <button class="button btn-navigate-form-step" type="button" step_number="3">Next</button>
@@ -125,6 +137,7 @@
         <!-- Step 3 Content, default hidden on page load. -->
         <section id="step-3" class="form-step d-none">
           <h2 class="font-normal">Select Region</h2>
+        
           <!-- Step 3 input fields -->
           <div class="mt-3">
             <div>
