--- a/templates/dev/start.html
+++ b/templates/dev/start.html
@@ -125,8 +125,9 @@
           </div>
         </table>
           <div>
+            <div class="firstcolumn"> 
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6950840.425674824!2d-104.4374920467198!3d31.71684964456462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864070360b823249%3A0x16eb1c8f1808de3c!2sTexas%2C%20USA!5e0!3m2!1sen!2sin!4v1685964608784!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          
+            </div>
           <div  class="satelite"><iframe src="https://www.google.com/maps/embed?pb=!4v1685965019798!6m8!1m7!1sJlisa3gUt03qVjgusFj76w!2m2!1d31.47325825865038!2d-99.160226252092!3f165.85064983301376!4f-0.9330848807636016!5f0.7820865974627469" width="600"  height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
           </div>
           <div class="mt-3">
