made changes to UI

--- a/templates/dev/index.html
+++ b/templates/dev/index.html
@@ -21,9 +21,9 @@
   <header id="site-header" class="fixed-top">
     <div class="container">
       <nav class="navbar navbar-expand-lg stroke">
-        <h1><a class="navbar-brand mr-lg-5" href="index.html">
+        <h1><a class="navbar-brand mr-lg-5" href="{{url_for('index')}}">
 
-          <img src="{{url_for('static',filename='images/logo2.png')}}" alt="Your logo" title="Your logo" style="height: 90px;"/>Green<span>Ag</span>
+          <img src="{{url_for('static',filename='images/logo2.png')}}" alt="Your logo" title="Your logo" style="height: 50px;"/>Green<span>Ag</span>
           </a></h1>
         <!-- <div class="diagonal-box"><a class="navbar-brand" href="#index.html">
           <img src="/images/Untitled design.png" alt="Your logo" title="Your logo" style="height: 90px;"/>
@@ -217,18 +217,17 @@
             <img src="{{url_for('static',filename='/images/1-Sri-Lanka-Organic-Agriculture-tea-plantationGettyImages-1234422238.webp')}}" class="img-fluid" alt="" />
           </div>
           <div class="cwp4-text col-lg-6">
-            <h6 class="sub-title">what We Do</h6>
-            <h3 class="hny-title">What We Offer for You</h3>
-            <p>The pain itself is fun, the main adipisicingelit, but I give it time to as low as labor and
-              obesity.
+            <h6 class="sub-title">Impact</h6>
+            <h3 class="hny-title">What change we envision</h3>
+            <p>
             </p>
 
             <ul class="cont-4">
-              <li><span class="fa fa-check"></span> Weed Control</li>
-              <li><span class="fa fa-check"></span> Pest Control</li>
-              <li><span class="fa fa-check"></span> Grass Seeding</li>
-              <li><span class="fa fa-check"></span> Industry Oriented</li>
-              <li><span class="fa fa-check"></span> Fresh Milk products</li>
+              <li><span class="fa fa-check"></span> Empowering Farmers with Data-Driven Insights</li>
+              <li><span class="fa fa-check"></span> Reduction in Emissions and Improved Sustainability</li>
+              <li><span class="fa fa-check"></span> Optimize resource allocation and minimize waste </li>
+              <li><span class="fa fa-check"></span> Environmental Stewardship and Conservation</li>
+              <li><span class="fa fa-check"></span> Improve overall productivity</li>
 
             </ul>
           </div>
