--- a/templates/home.html
+++ b/templates/home.html
@@ -21,8 +21,8 @@
     function initMap(){
         var map = new google.maps.Map(
             document.getElementById('map'),{
-                center:{lat:37.7749,lng: -122.4194},
-                zoom:12,
+                center:{lat:39.8283,lng: -98.5795},
+                zoom:4,
 
             }
         )
@@ -54,12 +54,10 @@
     // }
     </script>
   </head>
-  <body>
+  <body style="background-color:#D6E8DB;">
    
     <div class="login">
-      <button onclick="initMap()">
-        getlat 
-      </button>
+      
       
       <h1>GHG Estimation</h1>
   
