--- a/templates/dev/index.html
+++ b/templates/dev/index.html
@@ -266,14 +266,14 @@
       <div class="w3l-header mb-md-5 mb-4">
         <h6 class="sub-title">Healthy food</h6>
         <h3 class="hny-title">We Provide
-          High-Quality <br> Organic Products</h3>
-        <p class="">All products we are tested and high quality.</p>
+          Best Emission Estimation tool <br> in the Market</h3>
+        <p class="">Either use our Farm Specific tool or Next Gen ML toolkit</p>
       </div>
       <div class="row bottom-ab-grids align-items-center">
         <div class="col-lg-4 bottom-ab-left">
           <div class="grdhny-info">
             <img src="{{url_for('static',filename='images/thumb_34512_social_default_big.jpeg')}}" class="img-curve img-fluid" alt="" />
-            <h4><a href="#" class="hnys-title">Industry Oriented</a></h4>
+            <h4><a href="#" class="hnys-title">Industry Standards- IPCC</a></h4>
             <p class="mt-2">The pain itself is important to the main adipisicing elite. This hatred is followed by pleasure
               obliged to follow.</p>
           </div>
@@ -281,7 +281,7 @@
         <div class="col-lg-4 bottom-ab-right my-lg-0 my-5">
           <div class="grdhny-info">
             <img src="{{url_for('static',filename='/images/Ecologically_grown_vegetables.jpg')}}" class="img-curve img-fluid" alt="" />
-            <h4><a href="#" class="hnys-title">Fresh Vegetables</a></h4>
+            <h4><a href="#" class="hnys-title">Call for Climate Action</a></h4>
             <p class="mt-2">The pain itself is important to the main adipisicing elite. This hatred is followed by pleasure
               obliged to follow.</p>
           </div>
@@ -289,7 +289,7 @@
         <div class="col-lg-4 bottom-ab-right">
           <div class="grdhny-info">
             <img src="{{url_for('static',filename='/images/organic-dairy.jpg')}}" class="img-curve img-fluid" alt="" />
-            <h4><a href="#" class="hnys-title">Fresh Milk</a></h4>
+            <h4><a href="#" class="hnys-title">Helps achieve SDG</a></h4>
             <p class="mt-2">The pain itself is important to the main adipisicing elite. This hatred is followed by pleasure
               obliged to follow.</p>
           </div>
